refactor: Collections 변경 못 하도록 수정